5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4059/executions/1668_1393.log
== SUBMITION (2019-04-15 19:04:54) 
-- CODE:
peso=float(input(""))

if (peso<5000):
	valor=peso*(0,05)
	print(valor)
else:
	valor=peso*0,04 + 60
	print(valor)
	
-- EXECUTION TIME:
0.138202
-- ERROR:
  File "/home/codebench/codes/1668/1393/main.py", line 4
    valor=peso*(0,05)
                   ^
SyntaxError: invalid token

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:05:21) 
-- CODE:
peso=float(input(""))

if (peso<5000):
	valor=peso*(0,05)
	print(round(valor,2)
else:
	valor=peso*0,04 + 60
	print(round(valor,2)
	
-- EXECUTION TIME:
0.138761
-- ERROR:
  File "/home/codebench/codes/1668/1393/main.py", line 4
    valor=peso*(0,05)
                   ^
SyntaxError: invalid token

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:05:23) 
-- CODE:
peso=float(input(""))

if (peso<5000):
	valor=peso*(0,05)
	print(round(valor,2)
else:
	valor=peso*0,04 + 60
	print(round(valor,2)
	
-- ERROR:
File "XXXX", line 4
    valor=peso*(0,05)
                   ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:05:59) 
-- CODE:
peso=float(input())

if (peso<5000):
	valor=peso*(0,05)
	print(round(valor,2)
else:
	valor=peso*0,04 + 60
	print(round(valor,2)
	
-- ERROR:
File "XXXX", line 4
    valor=peso*(0,05)
                   ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:06:31) 
-- CODE:
peso=float(input())

if (peso<5000):
	valor=peso*(5/100)
	print(round(valor,2)
else:
	valor=peso*(4/100) + 60
	print(round(valor,2)
	
-- EXECUTION TIME:
0.13858
-- ERROR:
  File "/home/codebench/codes/1668/1393/main.py", line 6
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:06:32) 
-- CODE:
peso=float(input())

if (peso<5000):
	valor=peso*(5/100)
	print(round(valor,2)
else:
	valor=peso*(4/100) + 60
	print(round(valor,2)
	
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:06:40) 
-- CODE:
peso=float(input())

if (peso<5000):
	valor=peso*(5/100)
	print(round(valor,2))
else:
	valor=peso*(4/100) + 60
	print(round(valor,2)
	
-- EXECUTION TIME:
0.214508
-- ERROR:
  File "/home/codebench/codes/1668/1393/main.py", line 10
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:06:41) 
-- CODE:
peso=float(input())

if (peso<5000):
	valor=peso*(5/100)
	print(round(valor,2))
else:
	valor=peso*(4/100) + 60
	print(round(valor,2)
	
-- ERROR:
File "XXXX", line 10
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:06:52) 
-- CODE:
peso=float(input())

if (peso<5000):
	valor=peso*(5/100)
	print(round(valor,2))
else:
	valor=peso*(4/100) + 60
	print(round(valor,2))
	
-- EXECUTION TIME:
0.202861
-- TEST CASE 1:
---- input:
1232.2
---- correct output:
61.61
---- user output:
61.61
-- TEST CASE 2:
---- input:
5055.98
---- correct output:
262.24
---- user output:
262.24
-- TEST CASE 3:
---- input:
200
---- correct output:
10.0
---- user output:
10.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
